Rework large portions and add new features